# LangQuizEngine

./: CMakeLists.txt  LQDatabase.cpp  LQDatabase.h  LQEngine.cpp  LQEngine.h  LQQuestion.cpp  LQQuestion.h  README  main.cpp
